0.04 2013-01-31
        - Update year.

0.03 2012-12-08
        - Start IOLoop if not started yet.

0.02 2012-11-19
        - directory bugfix for mounted apps.
	- Made Carp no longer a dependency.

0.01 2012-11-10
        - Separation from Sojolicious package.
        - Initial submission to GitHub.