@@ -44,6 +44,9 @@ C<default> is assumed.
 
 =head1 METHODS
 
+L<Mojolicious::Plugin::Oro> inherits all methods from
+L<Mojolicious::Plugin> and implements the following new ones.
+
 =head2 C<register>
 
   # Mojolicious
@@ -142,7 +145,7 @@ L<DBIx::Oro>.
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright (C) 2012, Nils Diewald.
+Copyright (C) 2012-2013, Nils Diewald.
 
 This program is free software, you can redistribute it
 and/or modify it under the same terms as Perl.
