@@ -1,5 +1,6 @@
 0.04 2013-01-31
         - Update year.
+	- Warn regarding non-unique database handles.
 
 0.03 2012-12-08
         - Start IOLoop if not started yet.
